[gd_scene load_steps=21 format=2]

[ext_resource path="res://Asset/Player & Person/Cubo triste sketch style gg copy.png" type="Texture" id=1]
[ext_resource path="res://Asset/Player & Person/Cubo Cazzo sketch style copy.png" type="Texture" id=2]
[ext_resource path="res://Asset/Player & Person/Cubo Happy.png" type="Texture" id=3]
[ext_resource path="res://Asset/Player & Person/Cubo Empatico.png" type="Texture" id=4]
[ext_resource path="res://Asset/Player & Person/Cubo Innamorato.png" type="Texture" id=5]
[ext_resource path="res://Asset/Player & Person/Cubo Depre.png" type="Texture" id=6]
[ext_resource path="res://Asset/Player & Person/Cubo Neutral.png" type="Texture" id=7]
[ext_resource path="res://Screens/ColorSelect.gd" type="Script" id=8]
[ext_resource path="res://Screens/Happy.gd" type="Script" id=9]
[ext_resource path="res://Screens/Empaty.gd" type="Script" id=10]
[ext_resource path="res://Screens/Depre.gd" type="Script" id=11]
[ext_resource path="res://Screens/Sad.gd" type="Script" id=12]
[ext_resource path="res://Screens/Love.gd" type="Script" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 64 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 64, 64 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 64, 64 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 64, 64 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 64, 64 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 64, 64 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 64, 64 )

[node name="ColorSelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_top = 512.0
margin_right = 1280.0
margin_bottom = 704.0
color = Color( 0, 0, 0, 0.635294 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Neutral" type="TouchScreenButton" parent="ColorRect"]
position = Vector2( 96, 32 )
normal = ExtResource( 7 )
shape = SubResource( 1 )

[node name="Angry" type="TouchScreenButton" parent="ColorRect"]
position = Vector2( 256, 32 )
normal = ExtResource( 2 )
shape = SubResource( 2 )

[node name="Happy" type="TouchScreenButton" parent="ColorRect" groups=[
"ColorButtons",
]]
position = Vector2( 416, 32 )
normal = ExtResource( 3 )
shape = SubResource( 3 )
script = ExtResource( 9 )

[node name="Sad" type="TouchScreenButton" parent="ColorRect" groups=[
"ColorButtons",
]]
position = Vector2( 576, 32 )
normal = ExtResource( 1 )
shape = SubResource( 4 )
script = ExtResource( 12 )

[node name="Empaty" type="TouchScreenButton" parent="ColorRect" groups=[
"ColorButtons",
]]
position = Vector2( 736, 32 )
normal = ExtResource( 4 )
shape = SubResource( 5 )
script = ExtResource( 10 )

[node name="Love" type="TouchScreenButton" parent="ColorRect" groups=[
"ColorButtons",
]]
position = Vector2( 896, 32 )
normal = ExtResource( 5 )
shape = SubResource( 6 )
script = ExtResource( 13 )

[node name="Depre" type="TouchScreenButton" parent="ColorRect" groups=[
"ColorButtons",
]]
position = Vector2( 1056, 32 )
normal = ExtResource( 6 )
shape = SubResource( 7 )
script = ExtResource( 11 )
[connection signal="pressed" from="ColorRect/Neutral" to="." method="_on_Neutral_pressed"]
[connection signal="pressed" from="ColorRect/Angry" to="." method="_on_Angry_pressed"]
[connection signal="pressed" from="ColorRect/Happy" to="." method="_on_Happy_pressed"]
[connection signal="pressed" from="ColorRect/Sad" to="." method="_on_Sad_pressed"]
[connection signal="pressed" from="ColorRect/Empaty" to="." method="_on_Empaty_pressed"]
[connection signal="pressed" from="ColorRect/Love" to="." method="_on_Love_pressed"]
[connection signal="pressed" from="ColorRect/Depre" to="." method="_on_Depre_pressed"]
